Makefile: install-linux (/usr/local/bin/mcpgen)追加

--- a/sources/Makefile
+++ b/sources/Makefile
@@ -2,7 +2,7 @@
 
 hello: ## golang hello world test
 	cd hello-world && go run hello.go
-build: ## build mcpgen
+build: ## build mcpgen (test)
 	cd mcpgen_dir && CGO_ENABLED=0 go build -o ../mcpgen -ldflags '-s -w' -trimpath
 create-yaml: ## create-mode
 	cd mcpgen_dir && MCPGEN_CREATE_YAML_MODE= go run main.go
@@ -13,7 +13,7 @@ cross-compile: ## cross compile
 	@cd mcpgen_dir && GOOS=darwin  GOARCH=amd64 CGO_ENABLED=0 go build -o ../compiled/mac_intel/mcpgen -ldflags '-s -w' -trimpath
 	@cd mcpgen_dir && GOOS=darwin  GOARCH=arm64 CGO_ENABLED=0 go build -o ../compiled/mac_arm/mcpgen -ldflags '-s -w' -trimpath
 
-install: ## mcpgen install test
+install: ## mcpgen install (test)
 	cd mcpgen_dir && CGO_ENABLED=0 go install -ldflags '-s -w' -trimpath mcpgen.go 
 
 help: ## Display this help screen.
